# Howdy-Scout-Interface

./: .$Ui Drawing.drawio.bkp  .$Ui Drawing.drawio.dtmp  .breakpoints  .replit  APIInterface.js  Azure.js  Azure_API.py  ScoutingData.js  Ui Drawing.drawio  compair.css  compair.html  compair.js  graph.js  index.html  package-lock.json  package.json  pyproject.toml  scouting_data.json  script.js  sqltest.js  style.css
sqltest/: package-lock.json  package.json  sqltest.js
