[tool.poetry]
name = "repl-html-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pymssql = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
